--- a/style.css
+++ b/style.css
@@ -14,11 +14,10 @@
 
 .todo-available-tasks-text {
     margin-left:30%;
-    padding-bottom:5px;
-    padding-top:5px;
+    padding: 13px 0px;
     margin-bottom:20px;
     max-width:170px;
-    font-size:15px;
+    font-size:16px;
 }
 
 .todo-edit-task-input {
